kubernetes/base/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: securecart-backend
  labels:
    app: securecart
    component: backend

spec:
  replicas: 2

  selector:
    matchLabels:
      app: securecart
      component: backend

  template:
    metadata:
      labels:
        app: securecart
        component: backend

    spec:
      containers:
        - name: backend
          image: securecart-backend:0.1.0
          imagePullPolicy: Never

          ports:
            - containerPort: 8000

          startupProbe:
            httpGet:
              path: /health
              port: 8000
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 12

          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
