kubernetes/base/frontend-pod.yaml
apiVersion: v1 
kind: Pod 
metadata: 
  name: securecart-frontend 
  labels: 
    app: securecart 
    component: frontend 
spec:
  containers: 
  - name: frontend 
    image: nginx:1.27-alpine 
    ports: 
    - name: http 
      containerPort: 80
