kubernetes/base/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: securecart-backend-service

spec:
  selector:
    app: securecart
    component: backend

  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000

  type: ClusterIP
