kubernetes/base/frontend-service.yaml
apiVersion: v1  
kind: Service  

metadata: 
  name: securecart-service 

spec:
  type: ClusterIP 

  selector: 
    app: securecart 
    component: frontend 

  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
