kubernetes/base/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: securecart-postgres

spec:
  clusterIP: None

  selector:
    app: securecart
    component: database

  ports:
    - name: postgres
      protocol: TCP
      port: 5432
      targetPort: 5432
