kubernetes/base/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: securecart-ingress
spec: 
  ingressClassName: nginx 

  rules: 
    - host: securecart.local
      http: 
        paths: 
          - path: /
            pathType: Prefix
            backend: 
              service: 
                name: securecart-service
                port: 
                  number: 80
